# SPECFEM3D-with-Cube2sph-and-PML

./: CMakeLists.txt  Makefile  Makefile.in  Makefile_cube2sph  Makefile_lbfgs  Makefile_slice  Makefile_sph  README.md  compile_log  flags.guess  module_load  nohup.out  quick_install
src/auxiliaries/: CMakeLists.txt  combine_vol_data.F90  combine_vol_data_impl.f90  create_slice.f90  create_slice_loc.f90
src/decompose_mesh/: CMakeLists.txt  decompose_mesh.F90  part_decompose_mesh.F90  rules.mk
src/generate_databases/: CMakeLists.txt  adepml_set_index_glob.f90  calc_jacobian.f90  create_mass_matrices.f90  create_regions_mesh.f90  generate_databases_par.F90  get_discontinuity_surface.f90  get_model.F90  model_default.f90  model_gll_aniso.f90  model_gll_aniso.f90.bak  model_tomography.f90  pml_set_local_dampingcoeff.f90  pml_set_local_dampingcoeff_ade.f90  read_parameters.f90  read_partition_files.f90  rules.mk  save_adepml_solver_files.f90  save_arrays_solver.F90  wavefield_discontinuity_generate_databases_mod.f90
src/meshfem3D/: CMakeLists.txt  create_meshfem_mesh.f90  earth_chunk.f90  get_wavefield_discontinuity.f90  rules.mk  save_databases.F90
src/specfem3D/: CMakeLists.txt  adepml_utils.f90  adepml_utils_old.f90.bak  assemble_MPI_vector.f90  check_stability.f90  comp_source_time_function.f90  compute_add_sources_viscoelastic.F90  compute_forces_viscoelastic.F90  compute_forces_viscoelastic.f90  compute_forces_viscoelastic_adepml_element.f90  compute_forces_viscoelastic_calling_gpu.F90  compute_forces_viscoelastic_calling_gpu.F90.bak  compute_forces_viscoelastic_calling_routine.F90  couple_with_injection.f90  debug.f90  finalize_simulation.f90  get_force.f90  initialize_simulation.F90  iterate_time.F90  locate_source.F90  pml_allocate_arrays.f90  pml_par.f90  prepare_gpu.f90  prepare_timerun.F90  read_adepml_files.f90  read_mesh_databases.F90  rules.mk  save_adjoint_kernels.f90  setup_sources_receivers.f90  specfem3D_par.F90  subsample_forward.f90  update_displacement_scheme.f90  wavefield_discontinuity.f90  wavefield_discontinuity_c.f90.bak  wavefield_discontinuity_solver_mod.f90
src/tomography/: CMakeLists.txt  add_model_iso.f90  add_model_iso_from_existing_direction.f90  add_model_iso_lbfgs.f90  get_lbfgs_direction.f90.bk  read_model.f90  read_parameters_lbfgs.f90  rules.mk  write_gd_direction_iso.f90  write_lbfgs_direction_iso.f90
src/tomography/postprocess_sensitivity_kernels/: calc_kernel_abs.f90  calc_kernel_abs_inv.f90  calc_kernel_div_hess.f90  calc_kernel_mul_inv_hess.f90  combine_sem_joint.f90  div_kernel_by_nmeas.f90  get_isotropic_vbulk.f90  get_max_absolute_value.f90  rules.mk  scale_rho_with_vs.f90  select_control_group.f90  select_control_group_joint.f90  select_control_group_joint_diff.f90  smooth_sem.F90  smooth_sem_cuda_stubs.c  smooth_sem_pde.F90  smooth_sem_sph.F90  smooth_sem_sph_multi.F90  smooth_sem_sph_multi_pde.F90  smooth_sem_sph_pde.F90  smooth_sem_sph_pde.F90.bak  smooth_sem_sph_pde.cu  subtract_kernel_normalize.f90  update_model_by_perturbation.f90  update_model_by_steplength.f90  update_model_by_steplength.f90.bk  write_lbfgs_direction.f90  write_lbfgs_direction_smooth.f90  write_zero_array.f90
utils/cube2sph/: CMakeLists.txt  Makefile  module_load
utils/cube2sph/EXAMPLES/NED-model/: Cube2sph_model_par  Numglob2loc_elmn.txt  boundary_2d.gmt  boundary_2d.gmt.pml  clean_files.sh  compare.py  gen_station.py  module_load  nummaterial_velocity_file_tomo  rotate_seismogram.py  sbash_fwat2_postproc_opt.sh  station.lst  step0_plot_region.sh  step1_run_mesher.sh  step2_slurm_cube2sph.sh  step3_slurm_smooth_model.sh  step4_slurm_solver.sh
utils/cube2sph/EXAMPLES/cascadia/: Numglob2loc_elmn.txt  adepml_stage  change_name.sh  compare.py  fort.42  fort.98  nummaterial_velocity_file_tomo  output_generate_databases.txt  rotate.sh  step0_plot_region.sh  step1_run_mesher.sh  step2_slurm_cube2sph.sh  step3_slurm_solver.sh  test_same.py  vs.vtk
utils/cube2sph/EXAMPLES/prem/: README.txt  run_mesher.sh
utils/cube2sph/OUTPUT_FILES/: values_from_mesher.h
utils/cube2sph/cube2sph_examples/: plot_utils.py  rotate_seismogram.py  xyz2latlond.py
utils/cube2sph/cube2sph_examples/alaska_example/: Cube2sph_model_par  README.txt  hex8tohex27.py  nummaterial_velocity_file_tomo  run_mesher.sh  slurm_cube2sph.sh  slurm_solver_rotate.sh
utils/cube2sph/cube2sph_examples/northeast_china/: nummaterial_velocity_file_tomo  run_mesher.sh  slurm_cube2sph.sh  wavefield_discontinuity_box  wavefield_discontinuity_switch  write_model.py
utils/cube2sph/cube2sph_examples/pml_prem/: slurm_cube2sph.sh  slurm_solver_rotate.sh
utils/cube2sph/cube2sph_examples/stacey_prem/: Cube2sph_model_par  README.txt  slurm_cube2sph.sh
utils/cube2sph/include/: FindNetCDF.cmake  config.fh  config.h  constants.h  precision.h
utils/cube2sph/scripts/pml/: copy_aniso.sh  go_generate_database_ani_init.sh  go_get_initial_model.sh  go_get_slice.sh  go_smooth_kernel.sh  make_initial_model.sh  slurm_cube2sph.sh  slurm_cube2sph1.sh  slurm_generate_databases_ref.sh
utils/cube2sph/scripts/stacey/: go_generate_database.sh  go_get_slice_loc.sh  go_get_slice_vert.sh  run_mesher.sh  slurm_cube2sph.sh  slurm_setup_adepml.sh  slurm_solver.sh  write_mesh_par.py
utils/cube2sph/src/: calc_adepml_physical_jacobian.f90  calc_r_trans.f90  create_ckbd.f90  create_mass_matrices_pml_elastic_loc.f90  cube2latlon.f90  cube2sph.f90  cube2sph_adepml.f90  cube2sph_adepml.f90.bk  cube2sph_boundary_gmt.f90  cube2sph_force.f90  cube2sph_nopml.f90  cube2sph_station.f90  cube2sph_station_inv.f90  cube2sph_trans.f90  debug.f90  find_parameter_value.f90  geographic_to_cartesian.f90  get_gll_xyz.f90  netcdf_model_wrapper.f90  node_stretching.f90  node_stretching_parallel.f90  node_stretching_subroutine.f90  read_netcdf_model.f90  setup_adepml.f90  setup_model_cartesian.f90  setup_model_cartesian_subroutine.f90  update_parameters_from_netcdf.f90  write_cmt_solution_file.f90  write_force_solution_file.f90  write_horizontal_slice_vtk.f90  write_sr_database.f90  write_stations_file.f90  write_vertical_slice_vtk.f90
(+249 files in other folders)
